--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.1.8"
+  },
+  "engines": {
+    "node": "v16.13.2",
+    "npm": "8.4.1"
   }
 }
